Add jaxb imports for table import, fix cast errors